--- a/estilos.css
+++ b/estilos.css
@@ -12,8 +12,6 @@ header{
     flex-direction: column;
     align-items: center;
     gap: 2em;
-    position: fixed;
-    width: 100%;
 }
 
 #logo{
@@ -28,11 +26,11 @@ header{
     height: 60px;
 }
 nav ul li{
-    background-color: rgb(255, 142, 176);
+    background-color: rgb(0, 0, 0);
     display: inline-block;
 }
 nav ul li a{
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     text-decoration: none;
     display:block;
     width: 100px;   
@@ -40,13 +38,16 @@ nav ul li a{
 }
 nav a:hover{
     background-color: rgb(56, 56, 56);
-    color: rgb(255, 255, 255);
+    color: rgb(255, 138, 196);
 }
 #home{
     background: rgb(34,0,36);
-background: linear-gradient(0deg, rgba(34,0,36,0) 0%, rgba(255, 163, 59, 0.345) 58%, rgba(0,255,102,0.11528361344537819) 100%) , url('./imagenes/banner_CELULAR-01.jpg') no-repeat;
+    background: linear-gradient(0deg, rgba(34,0,36,0) 0%,
+     rgba(255, 163, 59, 0.345) 58%,
+     rgba(0,255,102,0.11528361344537819) 100%) ,
+     url('./imagenes/banner_CELULAR-01.jpg') no-repeat;
     background-size:cover;
-    height: 80vh ;
+    height: 75vh ;
     padding:2em ;
     display:flex ;
     justify-content :flex-end;
@@ -86,6 +87,7 @@ background: linear-gradient(0deg, rgba(34,0,36,0) 0%, rgba(255, 163, 59, 0.345) 
     flex-direction: column;
     margin-bottom: 20px; 
 }
+
 .bloque img {
     width: 100%; 
     height: auto; 
@@ -96,10 +98,24 @@ background: linear-gradient(0deg, rgba(34,0,36,0) 0%, rgba(255, 163, 59, 0.345) 
     }
     .bloque h3{
         font-size: 2em;
+        text-align: center;
     }
     .bloque p{
         font-size: 1.3em;
     }
+    .ver-mas {
+        color: rgb(255, 255, 255);
+        cursor: pointer;
+        margin-top: 10px; 
+        background-color: #000000; 
+        color: white; 
+        padding: 10px 20px;
+        text-align: center;
+    }
+    .ver-mas:hover {
+        background-color: #cc4cb0; 
+    }
+    
 #productos{
     text-align: center;
     padding: 1em;
@@ -133,9 +149,70 @@ background: linear-gradient(0deg, rgba(34,0,36,0) 0%, rgba(255, 163, 59, 0.345) 
 #productos p{
     font-size: 1.2em;
 }
+.galeria {
+    position: relative;
+}
+
+.slides {
+    display: flex;
+    overflow-x: auto;
+    overflow-y: hidden;
+    scroll-snap-type: x mandatory;
+    -webkit-overflow-scrolling: touch; /* Desplazamiento suave en iOS */
+}
+
+.slide {
+    flex: 0 0 100%;
+    scroll-snap-align: start;
+    padding: 20px;
+    margin-bottom: 5px;
+}
+
+img {
+    width: 100%;
+    height: auto;
+}
+
+.comentarios {
+    background-color: #fff;
+    padding: 5px;
+    border-top: none;
+    text-align: center;
+    max-width: 100%;
+    align-items: center;
+}
+.estrellas {
+    font-size: 30px; 
+}
+
+.estrellas span {
+    color: rgb(255, 217, 1); 
+    -webkit-text-stroke: 1px rgb(255, 166, 0); 
+}
+.btn-prev, .btn-next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    padding: 1px;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    z-index: 1;
+    display: none;
+}
+
+.btn-prev {
+    left: 1px;
+}
+
+.btn-next {
+    right: 1px;
+}
 
 footer{
-    background-color: rgb(255, 142, 176);
+    background-color: #cc4cb0;
     color: white;
     padding: 2em;
     display: flex;
@@ -157,7 +234,7 @@ footer a{
     color: white;
 }
 footer a:hover{
-    background-color: rgb(34, 156, 238);
+    background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
 }
 
@@ -181,6 +258,8 @@ footer a:hover{
     #home h2{
         font-size: 5rem;
         margin: 0 2em 0;
+        
+
     }
 
     #productos figure{
@@ -200,6 +279,11 @@ footer a:hover{
         flex-basis: 40%;
         flex-grow: 1;
     }
+    .slide {
+        padding: 10px; /* Ajustar el padding para pantallas más grandes */
+        flex-basis: 50%; /* Reducir a la mitad el ancho de los slides */
+    }
+
     footer{
         flex-direction: row;
         justify-content: space-between;
@@ -214,7 +298,7 @@ footer a:hover{
 
     #home h2{
         font-size: 4.5rem;
-        margin: 0 0 5em;
+        margin: 0 0 5em; 
         max-width: 40%;
     
     }
@@ -227,7 +311,7 @@ footer a:hover{
     }
 
     .bloque {
-        flex: 1 0 48%;
+        flex: 1 0 48%; 
         padding: 0 10px; 
         margin: auto;
     }
@@ -242,10 +326,17 @@ footer a:hover{
     flex-wrap: nowrap;
     margin: auto;
 }
-
 #productos figure{
     padding: 1em;
     flex-basis: 100%;
 
 }
+.slide {
+    padding: 5px; 
+    flex-basis: 23.23%; 
+
+}
+}
+.oculto {
+    display: none;
 }
